# bitsign

./: .travis.yml  Cargo.toml  README.md
src/: cli.rs  hkdf.rs  main.rs
