[package]
name = "bitsign"
version = "0.1.1"
license = "MIT/Apache-2.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/bitsign"
readme = "README.md"
edition = "2018"
description = "Tool for generating bitcoin addresses and signing/verifying messages using addresses"
categories = ["cryptography", "command-line-utilities"]
keywords = ["bitcoin", "cli", "secp256k1", "wif", "segwit"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
structopt = "0.3"
bitcoin = "0.21"
getrandom = "0.1"
secp256k1 = { version = "0.15", features = ["recovery", "endomorphism"] }
base64 = "0.10"
serde_json = "1.0"

[badges]
travis-ci = { repository = "elichai/bitsign" }
